bookinfo/gateway-api/bookinfo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same 

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo-gateway
  rules:
  - matches:
    - path: 
        type: Exact
        value: /productpage
    - path: 
        type: PathPrefix
        value: /
    - path: 
        type: Exact
        value: /logout
    - path: 
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
      port: 9080
