bookinfo/gateway-api/route-all-v1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews 
spec:
  parentRefs:
  - groups: ""
    kind: Service
    name: reviews
    port: 9080
  rules:
  - backendRefs:
    - name: reviews-v1
      port: 9080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: 
  name: productpage 
spec:
  parentRefs: 
  - group: ""
    kind: Service
    name: productpage
    port: 9080
  rules:
  - backendRefs: 
    - name: productpage-v1
      port: 9080
---
apiVersion: gateway.networking.
